--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -2,22 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
 
 <GridPane alignment="center" hgap="10" prefHeight="147.0" prefWidth="165.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.BackEnd">
-    <Button fx:id="red" onAction="#pressButton" prefHeight="58.0" prefWidth="84.0" text="Click Me" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Button onAction="#pressButton" prefHeight="58.0" prefWidth="84.0" text="Click Me" GridPane.columnIndex="1" GridPane.rowIndex="2" />
     <Label fx:id="score" prefHeight="17.0" prefWidth="49.0" text="Score: 0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
 </GridPane>
